@@ -303,15 +303,22 @@ if (!empty($this->data['httptestid'])) {
 		$btnDelete = null;
 	}
 
+	if (!$this->data['is_template']) {
+		$buttonDelHistory = new CButtonQMessage(
+			'del_history',
+			_('Clear history and trends'),
+			_('History clearing can take a long time. Continue?')
+		);
+	}
+	else {
+		$buttonDelHistory = null;
+	}
+
 	$httpForm->addItem(makeFormFooter(
 		new CSubmit('update', _('Update')),
 		array(
 			new CSubmit('clone', _('Clone')),
-			new CButtonQMessage(
-				'del_history',
-				_('Clear history and trends'),
-				_('History clearing can take a long time. Continue?')
-			),
+			$buttonDelHistory,
 			$btnDelete,
 			new CButtonCancel()
 		)
